[package]
name = "mv-lookup-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.10.5"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop-rc", package = "halo2_proofs" }
